# auth

./: .gitignore  README.md  docker-compose.yaml
auth_server/: .dockerignore  Dockerfile  README.md  pyproject.toml
auth_server/auth_app/: main.py
auth_server/auth_app/api/: redis_deps.py  router.py  token_deps.py
auth_server/auth_app/api/endpoints/: login.py  logout.py
auth_server/auth_app/core/: config.py  security.py
auth_server/auth_app/crud/redis/: crud_user.py
auth_server/auth_app/db/redis/: pool.py
auth_server/auth_app/schemas/redis/: __init__.py  user.py
auth_server/auth_app/tests/api/: test_tokens.py
blog_server/: .dockerignore  Dockerfile  pyproject.toml
blog_server/blog_app/: main.py
blog_server/blog_app/api/: authorization_deps.py  mysql_deps.py  router.py
blog_server/blog_app/api/endpoints/: init_db.py  posts.py  users.py
blog_server/blog_app/core/: security.py
blog_server/blog_app/crud/mysql/: crud_post.py  crud_user.py
blog_server/blog_app/db/mysql/: session.py
blog_server/blog_app/models/mysql/: post.py
blog_server/blog_app/schemas/mysql/: __init__.py  post.py
blog_server/blog_app/schemas/token/: __init__.py  token.py
nginx/: Dockerfile  default.conf
register_server/: .dockerignore  Dockerfile  README.md  pyproject.toml
register_server/register_app/: main.py
register_server/register_app/api/: mysql_deps.py  redis_deps.py  router.py
register_server/register_app/api/endpoints/: init_db.py  users.py
register_server/register_app/core/: config.py  security.py
register_server/register_app/crud/mysql/: __init__.py  crud_user.py
register_server/register_app/crud/redis/: __init__.py  crud_user.py
register_server/register_app/db/mysql/: base_class.py  session.py
register_server/register_app/db/redis/: pool.py
register_server/register_app/models/mysql/: user.py
register_server/register_app/schemas/mysql/: user.py
register_server/register_app/schemas/redis/: __init__.py  user.py
register_server/register_app/tests/api/: test_users.py
