[tool.poetry]
name = "auth_app"
version = "0.0.1"
description = "인증 서버"
authors = ["hyeon <dev.dc.hyeon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
pydantic-settings = "^2.2.1"
pydantic = {extras = ["email"], version = "^2.7.0"}
redis = "^5.0.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
bcrypt = "4.0.1"

[tool.poetry.scripts]
start_server = 'auth_app.main:start'

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
