[tool.poetry]
name = "blog_app"
version = "0.0.1"
description = "블로그 서버"
authors = ["hyeon <dev.dc.hyeon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.29"
asyncmy = "^0.2.9"
passlib = "^1.7.4"
bcrypt = "^4.1.2"
pydantic = {extras = ["email"], version = "^2.7.0"}
cryptography = "^42.0.5"

[tool.poetry.scripts]
start_server = 'blog_app.main:start'

[tool.poetry.group.test.dependencies]
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0"
greenlet = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
