[tool.poetry]
name = "register_app"
version = "0.0.1"
description = "회원가입 서버"
authors = ["hyeon <dev.dc.hyeon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.29"
asyncmy = "^0.2.9"
passlib = "^1.7.4"
bcrypt = "4.0.1"
pydantic = {extras = ["email"], version = "^2.6.4"}
cryptography = "^42.0.5"
redis = "^5.0.3"

[tool.poetry.scripts]
start_server = 'register_app.main:start'

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
httpx = "^0.27.0"
trio = "^0.25.0"
greenlet = "^3.0.3"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

